feat(document): get download file api
